--- a/_sass/_includes/_hero.scss
+++ b/_sass/_includes/_hero.scss
@@ -69,10 +69,23 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	background-position: right top;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.hero__project__image {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+
+
 
 .hero__overlay {
 	position: absolute;
